# certifiable-inference

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTOR-LICENSE-AGREEMENT.md  README-FULL.md  README.md
docs/: style-guide.md
docs/requirements/: SRS-001-determinism.md  SRS-002-DETERMINISTIC-MATH.md  SRS-003-LINEAR-ALGEBRA.md
include/: deterministic_hash.h  file  fixed_point.h  matrix.h
src/containers/: deterministic_hash.c
src/core/: fixed_point.c  matrix.c
tests/benchmarks/: test_timing_consistency.c
tests/unit/: test_fixed_point.c  test_hash_basic.c  test_hash_consistency.c  test_matrix_reproducibility.c
